--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -61,7 +61,7 @@
             <TabItem x:Name="tabItem001" Header="Справочник .. Виды связи">
 
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="Spr001dataGrid" d:ItemsSource="{d:Binding}">
+                    <DataGrid x:Name="dataGridSpr001" d:ItemsSource="{d:Binding}">
                         
                     </DataGrid>
                 </Grid>
