--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -56,6 +56,7 @@
             <Button x:Name="btnLoadAll" Content="Загрузить всё ..." HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="1" Margin="1,1,1,1" Click="btnLoadAll_Click"/>
             <Button x:Name="btnShowFilterForm" Content="Фильтр" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="2" Margin="1,1,1,1" IsEnabled="False"/>
             <Button x:Name="btnShowTweakForm" Content="Настройки" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="3" Margin="1,1,1,1"/>
+            <Button x:Name="btnSaveChanges" Content="Сохранить" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="3" Margin="1,1,1,1" IsEnabled="False"/>
         </ToolBar>
         <TabControl x:Name="mainTabCtrl" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="11" Grid.RowSpan="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="1,1,1,1">
             <TabItem x:Name="tabItem001" Header="Справочник .. Виды связи">
