--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -82,7 +82,7 @@
             </TabItem>
             <TabItem x:Name="tabItem002" Header=" &lt;&lt; Справочник виды связи &gt;&gt;">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid  x:Name="dataGridSpr002"/>
+                    <DataGrid  x:Name="dataGridSpr002" ItemsSource="{Binding}" />
                 </Grid>
             </TabItem>
             <TabItem x:Name="tabItem003" Header="Справочник телеф. операторы">
