--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -83,7 +83,7 @@
             </TabItem>
             <TabItem x:Name="tabItem002" Header=" &lt;&lt; Справочник виды связи &gt;&gt;">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid  x:Name="dataGridSpr002" ItemsSource="{Binding}"/>
+                    <DataGrid  x:Name="dataGridSpr002" ItemsSource="{Binding}" dgx:DataGridFilter.IsAutoFilterEnabled="True"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="tabItem003" Header="Справочник телеф. операторы">
