--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,24 @@
         xmlns:local="clr-namespace:WpfToyDataForms"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <dgx:RegexContentFilterFactory x:Key="RegexContentFilterFactory"/>
+        <dgx:SimpleContentFilterFactory x:Key="SimpleContentFilterFactory"/>
+        <!-- Template for a simple integer dgx control. -->
+        <ControlTemplate x:Key="IntegerFilter">
+            <!--
+            
+            <src:IntegerGreatherThanFilterControl Filter="{Binding Path=Filter, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=dgx:DataGridFilterColumnControl}}"/>
+            -->
+        </ControlTemplate>
+
+        <ControlTemplate x:Key="FilterWithPopup">
+            <!--
+            
+            <src:FilterWithPopupControl Filter="{Binding Path=Filter, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=dgx:DataGridFilterColumnControl}}"/>
+            -->
+        </ControlTemplate>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
@@ -70,12 +88,12 @@
             <TabItem x:Name="tabItem001" Header="Справочник .. Виды связи">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <ToolBarPanel x:Name="toolBar4TabItem001" Height="32" IsEnabled="False" Visibility="Hidden">
-                        
+
                     </ToolBarPanel>
                     <Grid Background="#FFE5E5E5" HorizontalAlignment="Stretch">
                         <DataGrid Background="#FFF1ECEC" RowBackground="#FFF5F6F7" AlternatingRowBackground="#FFE6E6E6"  x:Name="dataGridSpr001" d:ItemsSource="{Binding }" DataContext="{Binding CollectionOf_TEL_VID_CONNECTs, BindsDirectlyToSource=True, RelativeSource={RelativeSource FindAncestor, AncestorLevel=2, AncestorType={x:Type local:MainWindow}}}" IsSynchronizedWithCurrentItem="False" Visibility="Hidden" BeginningEdit="dataGridSpr001_BeginningEdit" MouseRightButtonUp="dataGridSpr001_MouseRightButtonUp" >
                             <DataGrid.Columns>
-                                
+                                <DataGridTextColumn Header="Double/Custom" Binding="{Binding Probability}" dgx:DataGridFilterColumn.Template="{StaticResource FilterWithPopup}"/>
                             </DataGrid.Columns>
                         </DataGrid>
                     </Grid>
@@ -83,7 +101,26 @@
             </TabItem>
             <TabItem x:Name="tabItem002" Header=" &lt;&lt; Справочник виды связи &gt;&gt;">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid  x:Name="dataGridSpr002" ItemsSource="{Binding}" dgx:DataGridFilter.IsAutoFilterEnabled="True"/>
+                    <DataGrid  x:Name="dataGridSpr002" ItemsSource="{Binding}" dgx:DataGridFilter.IsAutoFilterEnabled="True">
+                        <DataGrid.Resources>
+                            <ControlTemplate x:Key="{x:Static dgx:DataGridFilter.IconTemplateKey}">
+                                <Path Data="M0,0 L10,0 6,4 6,9 4,9 4,4 Z" Fill="Orange" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,0"/>
+                            </ControlTemplate>
+                            <DataTemplate x:Key="CustomHeaderWithLeftAlignedSearch">
+                                <DockPanel>
+                                    <!-- The control to host the filter UI for this column -->
+                                    <dgx:DataGridFilterColumnControl DockPanel.Dock="Left"/>
+                                    <ContentPresenter x:Name="PART_Content" Content="{Binding}"
+                                        SnapsToDevicePixels="{Binding SnapsToDevicePixels, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGridColumnHeader}}"
+                                        HorizontalAlignment="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGridColumnHeader}}"
+                                        VerticalAlignment="{Binding VerticalContentAlignment, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGridColumnHeader}}"/>
+                                </DockPanel>
+                            </DataTemplate>
+                        </DataGrid.Resources>
+                        <DataGrid.Columns>
+                            
+                        </DataGrid.Columns>
+                    </DataGrid>
                 </Grid>
             </TabItem>
             <TabItem x:Name="tabItem003" Header="Справочник телеф. операторы">
