--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -101,7 +101,10 @@
             </TabItem>
             <TabItem x:Name="tabItem002" Header=" &lt;&lt; Справочник виды связи &gt;&gt;">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid  x:Name="dataGridSpr002" ItemsSource="{Binding}" dgx:DataGridFilter.IsAutoFilterEnabled="True">
+                    <!--
+                    
+                    -->
+                    <DataGrid  x:Name="dataGridSpr002" ItemsSource="{Binding}" dgx:DataGridFilter.IsAutoFilterEnabled="True" IsSynchronizedWithCurrentItem="True" AutoGenerateColumns="False" MinRowHeight="22">
                         <DataGrid.Resources>
                             <ControlTemplate x:Key="{x:Static dgx:DataGridFilter.IconTemplateKey}">
                                 <Path Data="M0,0 L10,0 6,4 6,9 4,9 4,4 Z" Fill="Orange" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,0"/>
@@ -118,7 +121,16 @@
                             </DataTemplate>
                         </DataGrid.Resources>
                         <DataGrid.Columns>
+                            <!--
                             
+                            <DataGridTextColumn Header="ID" Binding="{Binding IDConnect}" dgx:DataGridFilterColumn.Template="{StaticResource FilterWithPopup}"/>
+                            <DataGridTextColumn Header="Код" Binding="{Binding KodOfConnect}" dgx:DataGridFilterColumn.Template="{StaticResource FilterWithPopup}"/>
+                            <DataGridTextColumn Header="Название" Binding="{Binding NameOfConnect}" dgx:DataGridFilterColumn.Template="{StaticResource FilterWithPopup}"/>
+                            
+                            -->
+                            <DataGridTextColumn Header="ID" Binding="{Binding IDConnect}"/>
+                            <DataGridTextColumn Header="Код" Binding="{Binding KodOfConnect}"/>
+                            <DataGridTextColumn Header="Название" Binding="{Binding NameOfConnect}"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
