--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:dgx="clr-namespace:DataGridExtensions;assembly=DataGridExtensions"
         xmlns:local="clr-namespace:WpfToyDataForms"
         mc:Ignorable="d"
+        xmlns:col='clr-namespace:System.Collections;assembly=mscorlib'
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
         
@@ -15,6 +16,10 @@
         
         -->
 
+        <CollectionContainer x:Key="ResourceOfCollection">
+            
+        </CollectionContainer>
+        
         <CollectionViewSource x:Key="CollectionOfVIDConnect" Source="{}, CreateList=True"/>
         <dgx:RegexContentFilterFactory x:Key="RegexContentFilterFactory"/>
         <dgx:SimpleContentFilterFactory x:Key="SimpleContentFilterFactory"/>
