--- a/FilterWithPopupControl.xaml
+++ b/FilterWithPopupControl.xaml
@@ -6,8 +6,9 @@
              xmlns:local="clr-namespace:WpfToyDataForms"
              xmlns:dgx="clr-namespace:DataGridExtensions;assembly=DataGridExtensions"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+             d:DesignHeight="30" d:DesignWidth="394">
+
+    <StackPanel>
+        
+    </StackPanel>
 </UserControl>
