--- a/FilterWithPopupControl.xaml
+++ b/FilterWithPopupControl.xaml
@@ -9,6 +9,8 @@
              d:DesignHeight="30" d:DesignWidth="394">
 
     <StackPanel>
-        
+        <ComboBox>
+            
+        </ComboBox>
     </StackPanel>
 </UserControl>
