--- a/FilterWithPopupControl.xaml
+++ b/FilterWithPopupControl.xaml
@@ -8,7 +8,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="394">
 
-    <StackPanel>
+    <UserControl.Resources>
+        
+        
+    </UserControl.Resources>
+    <StackPanel x:Name="stackPanelForComboBoxFilterControl">
         <ComboBox>
             
         </ComboBox>
