--- a/RowInComboBoxForPopupControl.xaml
+++ b/RowInComboBoxForPopupControl.xaml
@@ -5,8 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfToyDataForms"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="28" d:DesignWidth="120">
     <Grid>
-            
+        <StackPanel x:Name="stackPanelForOneRowComboBoxFilterControl" Orientation="Horizontal">
+            <ComboBox /><ComboBox /><TextBlock /><ComboBox /><TextBlock />
+        </StackPanel>
     </Grid>
 </UserControl>
