--- a/RowInComboBoxForPopupControl.xaml
+++ b/RowInComboBoxForPopupControl.xaml
@@ -11,9 +11,9 @@
         <Grid.Resources>
             <ObjectDataProvider x:Key="OperatorSignProvider"   ObjectType="{x:Type local:CollectionOfEnums}" MethodName="GetAllOperatorSign" />
             <ObjectDataProvider x:Key="LogicSignProvider"   ObjectType="{x:Type local:CollectionOfEnums}" MethodName="GetAllLogicSign" />
-            <VectorCollection x:Key="collectionOfLogicOperators">
-                
-            </VectorCollection>
+            <x:Array x:Key="collectionOfLogicOperators" Type="sys:String">
+
+            </x:Array>
             <VectorCollection x:Key="collectionOfComparisionOperators">
                 
             </VectorCollection>
