for  FilterWithPopupControl.xaml  in  nested  ComboBox  added  children ComboBoxes :      --  <ComboBox MinWidth="44">  <ComboBoxItem><local:OneRowInComboBox x:Name="cmboxItem01"/></ComboBoxItem>   <ComboBoxItem><local:OneRowInComboBox x:Name="cmboxItem02"/></ComboBoxItem>          </ComboBox> .

--- a/FilterWithPopupControl.xaml
+++ b/FilterWithPopupControl.xaml
@@ -14,6 +14,12 @@
     </UserControl.Resources>
     <StackPanel x:Name="stackPanelForComboBoxFilterControl" Orientation="Horizontal">
         <ComboBox MinWidth="44">
+            <ComboBoxItem>
+                <local:OneRowInComboBox x:Name="cmboxItem01"/>
+            </ComboBoxItem>
+            <ComboBoxItem>
+                <local:OneRowInComboBox x:Name="cmboxItem02"/>
+            </ComboBoxItem>
             
         </ComboBox>
         <Button MinWidth="28">
