--- a/RowInComboBoxForPopupControl.xaml
+++ b/RowInComboBoxForPopupControl.xaml
@@ -36,9 +36,9 @@
                 <sys:String>&lt;</sys:String>
                 <sys:String>!=</sys:String>
             </ComboBox>
-            <TextBlock x:Name="txbValueForFilterLeftBoundary"/>
-            <ComboBox x:Name="cmbBoxForComparisionOperationSignRightBoundary"></ComboBox>
-            <TextBlock x:Name="txbValueForFilterRightBoundary"/>
+            <TextBlock x:Name="txbValueForFilterLeftBoundary" MaxWidth="0" MinWidth="32"/>
+            <ComboBox x:Name="cmbBoxForComparisionOperationSignRightBoundary" Visibility="Hidden"></ComboBox>
+            <TextBlock x:Name="txbValueForFilterRightBoundary" MinWidth="32" Visibility="Hidden"/>
         </StackPanel>
     </Grid>
 </UserControl>
